--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,22 @@
 :root {
   /* --background: #FFE4C4; */
   /* --background: #A7C796; */
+  --swiper-navigation-color: white !important; /* Белые стрелки */
   --background: white;
   --foreground: bkack;
+
+  .swiper-button-next,
+.swiper-button-prev {
+  color: white !important;
+  font-weight: bold !important;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 50px !important;
+  font-weight: bolder !important;
+  color: white !important;
+}
 }
 
 @media (prefers-color-scheme: dark) {
