--- a/src/app/MainPage/MainPageHeader.module.css
+++ b/src/app/MainPage/MainPageHeader.module.css
@@ -394,20 +394,6 @@
   padding: 5px; /* Немного отступов, чтобы не прижималось к краям */
 }
 
-/* .menubtn {
-  min-width: 130px;
-  background-color: #F5F5DC;
-  color: #678F4E;
-  border-radius: 25px;
-  text-decoration: none;
-  font-weight: bold;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  white-space: nowrap;
-  border: 3px solid #678F4E;
-  font-size: 14px;
-} */
-
 .alphabetLetter {
   background-color: #F5F5DC;
   border: 1px solid #678F4E;
@@ -422,10 +408,17 @@
 }
 
 .alphabetLetter:hover {
-  background-color: #ddd;
+  background-color: #678F4E;
+  color: white;
 }
 
 
 
+/******MainPageBodyTravel*****************/
 
 
+
+
+
+
+ 
