--- a/src/app/MainPage/css/MainPageHeader.module.css
+++ b/src/app/MainPage/css/MainPageHeader.module.css
@@ -131,7 +131,13 @@
   border: none;
 }
 
-@media (max-width: 1500px) {
+.burger {
+  display: none;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+@media (max-width: 1200px) {
   .containerHeader {
     flex-direction: column;
     /* align-items: flex-end; */
@@ -208,7 +214,6 @@
     height: auto;
   }
   
-  /*Стили для названия компании */
   .Logo {
     min-width: 100px;
     max-width: 150px;
@@ -216,7 +221,6 @@
 
   .logoContainer {
     width: 100%;
-    /* justify-content: flex-start; */
     margin-bottom: 15px;
   }
 
@@ -228,7 +232,7 @@
   }
 
   .menu a{
-    font-size: 8px;
+    font-size: 11px;
   }
 
   .menuItem {
