--- a/src/app/MainPage/css/MainPageBodyCountry.module.css
+++ b/src/app/MainPage/css/MainPageBodyCountry.module.css
@@ -138,7 +138,7 @@
   font-weight: bold;
 }
 
-.carousel {
+/* .carousel {
   display: flex;
   background-color: #F5F5DC;
   flex-direction: column;
@@ -179,7 +179,61 @@
 
 .dot.active {
   background-color: #678F4E;
+} */
+
+.carousel {
+  display: flex;
+  flex-direction: column;
+  background-color: #F5F5DC;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  padding-bottom: 20px;
 }
+
+.swiper-container {
+  width: 90%;
+  max-width: 1200px;
+  overflow: hidden;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+}
+
+.image {
+  width: 100%;
+  max-width: 260px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.swiper-pagination {
+  margin-top: 10px;
+}
+
+.swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: rgb(200, 198, 198);
+  border-radius: 50%;
+  transition: background 0.5s;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #678F4E;
+}
+
+
+
+
+
+
+
+
 
 /************MAINPAGEBODY*******************/
 
@@ -364,7 +418,7 @@
 }
 
 .categoryitem:hover .categoryimage {
-  transform: scale(1.1); /* Увеличение на 10% при наведении */
+  transform: scale(1.1); 
 }
 
 .noHighlight {
@@ -411,11 +465,6 @@
   background-color: #678F4E;
   color: white;
 }
-
-
-
-/******MainPageBodyTravel*****************/
-
 
 
 
