Доработан адаптив с фото

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,13 @@
   }
 }
 
+@media (max-width: 520px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none !important;
+  }
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
