--- a/src/app/MainPage/css/MainPagePhoto.module.css
+++ b/src/app/MainPage/css/MainPagePhoto.module.css
@@ -20,6 +20,7 @@
   background-color: #F5F5DC;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 100%;
   height: 200px;
   overflow: hidden;
@@ -39,6 +40,46 @@
 
 .image:hover {
   transform: scale(1.05); /* Немного увеличивает изображение */
+}
+
+@media (max-width: 520px) {
+  .image {
+    width: 240px !important;
+    height: 130px !important;
+  }
+
+  .carousel {
+    height: 170px;
+  }
+}
+
+@media (max-width: 480px) {
+  .image {
+    width: 230px !important;
+    height: 120px !important;
+  }
+
+  .carousel {
+    height: 160px;
+  }
+}
+
+@media (max-width: 460px) {
+  .image {
+    width: 220px !important;
+    height: 110px !important;
+  }
+
+  .carousel {
+    height: 140px;
+  }
+}
+
+@media (max-width: 400px) {
+  .image {
+    width: 210px !important;
+    height: 100px !important;
+  }
 }
 
 
