--- a/src/app/MainPage/css/MainPageHeader.module.css
+++ b/src/app/MainPage/css/MainPageHeader.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   background-color: #93C572;
-  align-items: center;
+  align-items:flex-end;
   justify-content: space-between;
   margin: 0;
   padding: 0;
@@ -23,7 +23,7 @@
 .Logophoto {
   max-width: 100px;
   height: auto;
-  margin-left: 30px;
+  margin: 10px 0 10px 30px;
 }
 
 /*Стили для названия компании */
@@ -38,7 +38,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-  margin-right: 20px;
+  margin: 0 20px 10px 0;
 }
 
 .menuItem {
@@ -119,24 +119,17 @@
   border: none;
 }
 
-.burger {
-  display: none;
-  font-size: 28px;
-  cursor: pointer;
-}
 
 @media (max-width: 1200px) {
   .containerHeader {
-    flex-direction: column;
-    /* align-items: flex-end; */
+    justify-content: flex-start;
   }
 
-  .logoContainer {
-    width: 100%;
-    /* justify-content: flex-start; */
-    margin-bottom: 15px;
+  .Logophoto {
+    margin-left: 10px;
   }
-
+  
+  /*Стили для названия компании */
   .menu {
     width: 100%;
     justify-content: center;
@@ -154,31 +147,29 @@
     text-align: center;
   }
 }
-
+ 
 @media (max-width: 800px) {
   .Logophoto {
-    max-width: 100px;
-    height: auto;
-    /* margin-left: 10px; */
-  }
+    margin-left: 10px;
+    max-width: 70px;
+  } 
   
   /*Стили для названия компании */
   .Logo {
-    min-width: 150px;
-    max-width: 200px;
-  }
+    min-width: 100px;
+    max-width: 150px;
+  } 
 
   .logoContainer {
-    width: 100%;
-    /* justify-content: flex-start; */
-    margin-bottom: 15px;
+    /* width: 100%; */
+    margin-bottom: 0;
   }
 
-  .menu {
+   .menu {
     width: 100%;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 0 5px 15px 0;
+    margin: 0 5px 15px 0;
   }
 
   .menu a{
@@ -198,18 +189,18 @@
 
 @media (max-width: 500px) {
   .Logophoto {
-    max-width: 100px;
-    height: auto;
-  }
+    margin-left: 10px;
+    max-width: 60px;
+  } 
   
   .Logo {
     min-width: 100px;
-    max-width: 150px;
+    max-width: 130px;
   }
 
   .logoContainer {
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 0;
   }
 
   .menu {
