--- a/src/app/MainPage/MainPageHeader.module.css
+++ b/src/app/MainPage/MainPageHeader.module.css
@@ -1,186 +1,3 @@
-/*Стили для компонента MainPageHeader*/
-
-/* Стили для всего хедера*/
-.containerHeader {
-  display: flex;
-  background-color: #93C572;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-/*Стили для контйнера лого с названием*/
-.logoContainer {
-  flex: 1;
-  align-items: center;
-  display: flex;
-
-}
-
-/*Стили для картинки лого */
-.Logophoto {
-  width: 13%;
-  height: auto;
-  margin-left: 30px;
-}
-
-/*Стили для названия компании */
-.Logo {
-  width: 30%;
-  height: auto;
-  margin-left: 5px;
-}
-
-
-/*Стили для контейнера с меню*/
-.menu {
-  flex: 2;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 15px;
-  margin-right: 2vw;
-}
-
-.menuItem {
-  position: relative;
-  display: inline-block;
-
-}
-
-/*Стили для кнопок меню */
-.menubtn {
-  min-width: 130px;
-  background-color: #F5F5DC;
-  color: #678F4E;
-  border-radius: 25px;
-  text-decoration: none;
-  font-weight: bold;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  white-space: nowrap;
-  border: 3px solid #678F4E;
-  font-size: 14px;
-}
-
-.menu a {
-  display: block;
-  text-align: center;
-  padding: 10px;
-}
-
-.menubtn:hover {
-  background-color: #678F4E;
-  color: white;
-  transform: translateY(-2px);
-  border: 2px solid white;
-}
-
-.dropdown {
-  display: none;
-  position: absolute;
-  min-width: 130px;
-  list-style-type: none;
-  background-color: #F5F5DC;
-  padding: 3px;
-  font-size: 14px;
-  margin-top: 1px;
-  border-radius: 10px;
-  border: 2px solid #678F4E;
-}
-
-.menuItem:hover .dropdown {
-  display: block;
-}
-
-.dropdown li {
-  padding: 0 8px;
-}
-
-.dropdown li a {
-  text-decoration: none;
-  color: #678F4E;
-  font-weight: bold;
-  line-height: 1;
-  /* Минимальное расстояние между строками */
-}
-
-.dropdown li a:hover {
-  background-color: #678F4E;
-  color: white;
-  border-radius: 15px;
-  border: 2px solid white;
-}
-
-.h {
-  width: 100%;
-  height: 5px;
-  background-color: white;
-  border: none;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 300px;
-  background-color: #F5F5DC;
-}
-
-
-/******MAINPAGEPHOTO**********/
-.h2 {
-  font-size: 28px;
-  font-weight: bold;
-  padding: 10px 0 10px 0;
-  font-family: Playwrite India;
-  color: #556B2F;
-  font-style: italic;
-  font-weight: bold;
-}
-
-.carousel {
-  display: flex;
-  background-color: #F5F5DC;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 280px;
-  overflow: hidden;
-}
-
-.carouselTrack {
-  display: grid;
-  transition: transform 0.5s ease-in-out;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 15px;
-  margin: 0 10px 20px 10px;
-}
-
-.image {
-  min-width: 260px;
-  max-height: 150px;
-  border-radius: 10px;
-}
-
-.dots {
-  margin-top: 10px;
-  display: flex;
-  gap: 8px;
-}
-
-.dot {
-  width: 12px;
-  height: 12px;
-  background-color: rgb(200, 198, 198);
-  border-radius: 50%;
-  cursor: pointer;
-  transition: background 0.5s;
-}
-
-.dot.active {
-  background-color: #678F4E;
-}
-
 /************MAINPAGEBODY*******************/
 
 .containerBody {
@@ -215,6 +32,12 @@
 
 .searchInput:hover {
   border: 2px solid #678F4E;
+}
+
+.customCalendar span{
+  font-size: 20px;
+  font-weight: bold;
+  color: #678F4E;
 }
 
 .calendar {
@@ -412,9 +235,39 @@
   color: white;
 }
 
+@media (max-width: 1500px) {
+  .searchInput  {
+    width:310px;
+  }
+
+}
+
+@media (max-width: 1300px) {
+  .searchInput  {
+    width:270px;
+  }
+
+}
+
+@media (max-width: 1100px) {
+  .searchInput  {
+    width:220px;
+  }
+
+}
 
 
-/******MainPageBodyTravel*****************/
+@media (max-width: 900px) {
+  .searchInput  {
+    width:180px;
+  }
+
+  .text{
+    font-size: 12px;
+  }
+
+}
+
 
 
 
