Поменяла местами поиск и карусель с фото

--- a/src/app/MainPage/css/MainPageSearch.module.css
+++ b/src/app/MainPage/css/MainPageSearch.module.css
@@ -8,8 +8,8 @@
 
 .h {
     width: 100%;
-    height: 5px;
-    background-color: white;
+    height: 2px;
+    background-color: #678F4E;
     border: none;
 }
 
