--- a/src/app/MainPage/css/MainPageHeader.module.css
+++ b/src/app/MainPage/css/MainPageHeader.module.css
@@ -7,6 +7,8 @@
   background-color: #93C572;
   align-items:flex-end;
   justify-content: space-between;
+  align-items: center;
+  text-align: center;
   margin: 0;
   padding: 0;
 }
@@ -14,7 +16,8 @@
 /*Стили для контйнера лого с названием*/
 .logoContainer {
   gap: 2px;
-  align-items: center;
+  /* align-items: center;
+  justify-content: center; */
   display: flex;
 
 }
@@ -30,15 +33,18 @@
 .Logo {
   min-width: 100px;
   max-width: 200px;
-  margin-left: 10px;
+  margin-left: 20px;
   height: auto;
 }
 
 .menu {
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   gap: 10px;
-  margin: 0 20px 10px 0;
+  margin: 15px 40px 15px 0;
 }
 
 .menuItem {
@@ -54,7 +60,7 @@
 .menubtn {
   display: block;
   text-align: center;
-  min-width: 120px;
+  min-width: 100px;
   background-color: #F5F5DC;
   color: #678F4E;
   border-radius: 25px;
@@ -65,7 +71,7 @@
   white-space: nowrap;
   border: 3px solid #678F4E;
   font-size: 14px;
-  padding: 10px;
+  padding: 5px;
 }
 
 .menubtn:hover {
@@ -112,8 +118,8 @@
 
 .h {
   width: 100%;
-  height: 5px;
-  background-color: white;
+  height: 2px;
+  background-color: #678F4E;
   border: none;
 }
 
