--- a/src/app/MainPage/css/MainPagePhoto.module.css
+++ b/src/app/MainPage/css/MainPagePhoto.module.css
@@ -13,8 +13,8 @@
 
 .h {
   width: 100%;
-  height: 5px;
-  background-color: white;
+  height: 3px;
+  background-color: #678F4E;
   border: none;
 }
 
