--- a/src/app/MainPage/MainPageHeader.module.css
+++ b/src/app/MainPage/MainPageHeader.module.css
@@ -13,7 +13,9 @@
   display: flex;
   width: 25%;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center;
+  justify-content: center; */
+  text-align: center;
   height: auto;
   margin: 20px;
   padding: 10px;
