--- a/src/app/MainPage/css/MainPagePhoto.module.css
+++ b/src/app/MainPage/css/MainPagePhoto.module.css
@@ -13,7 +13,7 @@
 
 .h {
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: #678F4E;
   border: none;
 }
@@ -33,7 +33,7 @@
   gap: 10px;
   /* width: 95%; */
   /* overflow: hidden; */
-  margin: 20px;
+  margin: 15px 20px 15px 20px;
   scroll-snap-type: x mandatory; 
 }
 
