--- a/src/app/MainPage/css/MainPageFooter.module.css
+++ b/src/app/MainPage/css/MainPageFooter.module.css
@@ -24,3 +24,20 @@
   gap: 100px;
   margin: 30px 20px 30px 20px;
 }
+
+.text{
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.menu li {
+  padding: 5px;
+}
+
+.messenger{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
