--- a/src/app/MainPage/css/MainPageBodyNews.module.css
+++ b/src/app/MainPage/css/MainPageBodyNews.module.css
@@ -25,9 +25,11 @@
 }
 
 .newsitem h4 {
-  font-size: 1.2rem;
+  font-size: 20px;
   color: #678F4E;
   font-weight: bold;
+  font-Style: italic;
+  font-Family: Playwrite India;
 }
 
 .newsitem p {
