--- a/src/app/MainPage/MainPageHeader.module.css
+++ b/src/app/MainPage/MainPageHeader.module.css
@@ -6,15 +6,12 @@
   height: auto;
   gap: 20px;
   background-color: #F5F5DC;
- 
 }
 
 .leftcolumn{
   display: flex;
   width: 25%;
   flex-direction: column;
-  /* align-items: center;
-  justify-content: center; */
   text-align: center;
   height: auto;
   margin: 20px;
@@ -247,6 +244,11 @@
 @media (max-width: 1300px) {
   .searchInput  {
     width:270px;
+  }
+
+  .containerHeader {
+    flex-direction: column;
+    
   }
 
 }
