--- a/src/app/MainPage/css/MainPageHeader.module.css
+++ b/src/app/MainPage/css/MainPageHeader.module.css
@@ -31,8 +31,8 @@
 
 /*Стили для названия компании */
 .Logo {
-  min-width: 100px;
-  max-width: 200px;
+  min-width: 500px;
+  /* max-width: 500px; */
   margin-left: 20px;
   height: auto;
 }
@@ -82,16 +82,24 @@
 }
 
 .dropdown {
-  display: none;
   position: absolute;
-  min-width: 120px;
-  list-style-type: none;
+  top: 100%;
+  left: 0;
   background-color: #F5F5DC;
+  list-style: none;
+  display: none;
+  /* min-width: 120px; */
   padding: 5px;
-  z-index: 5;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
   margin-top: 1px;
   border-radius: 10px;
   border: 2px solid #678F4E;
+}
+
+.dropdown {
+  max-height: 210px; /* Примерно 7 элементов по 30px каждый */
+  overflow-y: auto; /* Добавляем вертикальный скроллбар */
 }
 
 .menuItem:hover .dropdown {
@@ -100,13 +108,15 @@
 
 .dropdown li {
   padding: 0 8px;
+  white-space: nowrap;
 }
 
 .dropdown li a {
   text-decoration: none;
   color: #678F4E;
   padding: 5px;
-  line-height: 1.5;  /* Минимальное расстояние между строками */
+  display: block;
+  line-height: 0.9;  /* Минимальное расстояние между строками */
 }
 
 .dropdown li a:hover {
@@ -124,9 +134,22 @@
 }
 
 
+@media (max-width: 1300px) {
+  .Logo {
+  min-width: 200px;
+  margin-left: 10px;
+}
+}
+
+
 @media (max-width: 1200px) {
   .containerHeader {
-    justify-content: flex-start;
+    justify-content: center;
+
+  }
+
+  .Logo {
+    margin: 15px 0 15px 0;
   }
 
   .Logophoto {
@@ -158,11 +181,10 @@
     max-width: 70px;
   } 
   
-  /*Стили для названия компании */
   .Logo {
-    min-width: 100px;
-    max-width: 150px;
-  } 
+    max-width: 400px;
+    margin: 15px 0 15px 0;
+  }
 
   .logoContainer {
     /* width: 100%; */
@@ -198,8 +220,11 @@
   } 
   
   .Logo {
-    min-width: 100px;
-    max-width: 130px;
+    .Logo {
+      max-width: 150px;
+      min-width: 70px;
+      margin: 10px 0 10px 0;
+    }
   }
 
   .logoContainer {
