--- a/src/app/MainPage/css/MainPageHeader.module.css
+++ b/src/app/MainPage/css/MainPageHeader.module.css
@@ -1,15 +1,10 @@
-/*Стили для компонента MainPageHeader*/
-
 /* Стили для всего хедера*/
 .containerHeader {
   display: flex;
   flex-wrap: wrap;
   background-color: #93C572;
-  /* align-items:flex-end; */
   justify-content: space-between;
-  /* align-items: center;
-  text-align: center; */
-  align-items:flex-end;
+  align-items: flex-end;
   margin: 0;
   padding: 0;
 }
@@ -17,42 +12,27 @@
 /*Стили для контйнера лого с названием*/
 .logoContainer {
   gap: 2px;
-  /* align-items: center;
-  justify-content: center; */
   display: flex;
 
-}
-
-/*Стили для картинки лого */
-.Logophoto {
-  max-width: 100px;
-  height: auto;
-  margin: 10px 0 10px 30px;
 }
 
 /*Стили для названия компании */
 .Logo {
   min-width: 500px;
-  /* max-width: 500px; */
-  margin-left: 20px;
-  /* height: auto; */
+  margin: 5px 0 5px 20px;
 }
 
 .menu {
   display: flex;
-  /* justify-content: flex-end; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* text-align: center; */
   gap: 10px;
-  margin: 15px 40px 10px 0;
+  margin: 15px 20px 10px 0;
 }
 
 .menuItem {
   position: relative;
 }
 
-.menu a{
+.menu a {
   font-size: 16px;
 }
 
@@ -88,7 +68,6 @@
   background-color: #F5F5DC;
   list-style: none;
   display: none;
-  /* min-width: 120px; */
   padding: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 1000;
@@ -98,8 +77,10 @@
 }
 
 .dropdown {
-  max-height: 210px; /* Примерно 7 элементов по 30px каждый */
-  overflow-y: auto; /* Добавляем вертикальный скроллбар */
+  max-height: 210px;
+  /* Примерно 7 элементов по 30px каждый */
+  overflow-y: auto;
+  /* Добавляем вертикальный скроллбар */
 }
 
 .menuItem:hover .dropdown {
@@ -116,7 +97,7 @@
   color: #678F4E;
   padding: 5px;
   display: block;
-  line-height: 0.9;  /* Минимальное расстояние между строками */
+  line-height: 0.9;
 }
 
 .dropdown li a:hover {
@@ -136,9 +117,8 @@
 
 @media (max-width: 1300px) {
   .Logo {
-  min-width: 200px;
-  margin-left: 10px;
-}
+    margin-left: 10px;
+  }
 }
 
 
@@ -148,13 +128,9 @@
   }
 
   .Logo {
-    margin: 5px 0 5px 0;
+    margin: 5px 0 10px 0;
   }
 
-  /* .Logophoto {
-    margin-left: 10px;
-  } */
-  
   /*Стили для названия компании */
   .menu {
     width: 100%;
@@ -164,7 +140,7 @@
     gap: 2px;
   }
 
-  .menu a{
+  .menu a {
     font-size: 18px;
   }
 
@@ -173,32 +149,24 @@
     text-align: center;
   }
 }
- 
+
 @media (max-width: 800px) {
-  .Logophoto {
-    margin-left: 10px;
-    max-width: 70px;
-  } 
-  
   .Logo {
-    max-width: 400px important;
-    min-width: 200px;
-    margin: 5px 0 5px 0;
+    margin: 5px 0 10px 0;
   }
 
   .logoContainer {
-    /* width: 100%; */
     margin-bottom: 0;
   }
 
-   .menu {
+  .menu {
     width: 100%;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 5px 15px 0;
   }
 
-  .menu a{
+  .menu a {
     font-size: 16px;
   }
 
@@ -214,17 +182,12 @@
 }
 
 @media (max-width: 500px) {
-  .Logophoto {
-    margin-left: 10px;
-    max-width: 60px;
-  } 
-  
-    .Logo {
-      max-width: 150px important;
-      min-width: 70px;
-      margin: 5px 0 5px 0;
-    }
-  
+  .Logo {
+    max-width: 350px;
+    min-width: 70px;
+    margin: 5px 0 10px 0;
+  }
+
   .logoContainer {
     width: 100%;
     margin-bottom: 0;
@@ -237,7 +200,7 @@
     margin-bottom: 0 5px 10px 0;
   }
 
-  .menu a{
+  .menu a {
     font-size: 13px;
   }
 
@@ -251,4 +214,3 @@
     padding: 5px;
   }
 }
-
