--- a/src/app/MainPage/css/MainPageFooter.module.css
+++ b/src/app/MainPage/css/MainPageFooter.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   margin: 0;
   padding: 0;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
 }
 
@@ -39,5 +39,53 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+@media screen and (max-width: 680px) {
+  .menu {
+    gap: 20px;
+    margin: 20px 20px 30px 20px;
+  }
+
+  .text{
+    font-size: 16px;
+  }
+
+  .menu li {
+    font-size: 14px;
+  }
+  
+}
+
+@media screen and (max-width: 500px) {
+  .menu {
+    gap: 15px;
+    margin: 10px 20px 30px 20px;
+  }
+
+  .text{
+    font-size: 14px;
+  }
+
+  .menu li {
+    font-size: 12px;
+  }
+  
+}
+
+@media screen and (max-width: 400px) {
+  .menu {
+    gap: 10px;
+    margin: 10px 20px 30px 20px;
+  }
+
+  .text{
+    font-size: 12px;
+  }
+
+  .menu li {
+    font-size: 10px;
+  }
+  
 }
 
