--- a/src/app/PageCountry/css/PageCountry.module.css
+++ b/src/app/PageCountry/css/PageCountry.module.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
-    margin: 20px 50px 20px 50px;
+    /* gap: 10px; */
+    margin-bottom: 40px;
 }
 
 .categorycontainer {
-    margin: 0 20px 0 20px;
+    /* margin: 0 20px 0 20px; */
     padding: 10px;
 }
 
@@ -53,3 +53,37 @@
     font-style: italic;
     font-weight: bold;
   }
+
+  @media screen and (max-width: 1200px) {
+    .conteiner {
+        margin-bottom: 10px;
+        gap: 0;
+    }
+    .categorycontainer {
+        margin: 0;
+    }   
+    
+    .categoryimage {
+        width: 150px;
+        height: 150px;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {    
+    .categorytext {
+        font-size: 14px;
+    }
+  }
+
+
+ @media screen and (max-width: 600px) {    
+    .categoryimage {
+        width: 120px;
+        height: 120px;
+    }
+
+    .categorytext {
+        font-size: 12px;
+    }
+  }
+ 
