--- a/src/app/PageCountryIndividual/css/PageCountryIndividual.module.css
+++ b/src/app/PageCountryIndividual/css/PageCountryIndividual.module.css
@@ -2,8 +2,6 @@
     display: flex;
     margin: 40px 20px 50px 20px;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
 }
 
 .container h1 {
@@ -21,11 +19,9 @@
 .imageGallery {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    /* 6 колонок равной ширины */
     justify-content: center;
-    /* Центрирует содержимое по горизонтали */
     gap: 10px;
-    /* Расстояние между изображениями */
+    width: 100%;
 }
 
 .galleryImage {
@@ -33,6 +29,7 @@
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
+    /* flex-shrink: 0; */
 }
 
 .containertour {
@@ -57,7 +54,8 @@
     margin-bottom: 30px;
 }
 
-.textBlock h2, .container h1 {
+.textBlock h2,
+.container h1 {
     font-size: 24px;
     color: #556B2F;
     font-family: "Playwrite India", Arial, sans-serif;
@@ -72,14 +70,8 @@
 }
 
 .introSection {
-    /* display: flex; */
-    /* flex-direction: row-reverse; */
-    /* align-items: center;  */
-    /* align-items: flex-start; */
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between;  */
-    /* gap: 10px;  */
-    margin: 10px 0; /* Відступ зверху і знизу */
+    margin: 10px 0;
+    /* Відступ зверху і знизу */
 }
 
 .mapImage {
@@ -93,10 +85,7 @@
 .introDescription {
     font-size: 16px;
     line-height: 1.5;
-    /* color: #333; */
-    /* flex: 1;  */
-    /* min-width: 0;  */
-  margin: 0; /* Убираем стандартные отступы */
+    margin: 0;
 }
 
 /* Стили для модального вікна */
@@ -106,26 +95,26 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(90, 90, 90, 0.7); /* Напівпрозорий фон */
+    background: rgba(90, 90, 90, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Щоб модалка була поверх усього */
+    z-index: 1000;
 }
 
 .modalContent {
     position: relative;
-    max-width: 90%; /* Обмежуємо розмір модального вікна */
-    max-height: 90vh; /* Обмежуємо висоту */
-    overflow: auto; /* Додаємо прокрутку, якщо зображення велике */
+    max-width: 90%;
+    max-height: 90vh;
+    overflow: auto;
 }
 
 .modalImage {
     display: block;
-    width: 1000px;   
+    width: 1000px;
     height: 600px;
     border-radius: 15px;
-    transition: transform 0.3s ease; /* Плавний поворот */
+    transition: transform 0.3s ease;
 }
 
 .modalControls {
@@ -170,9 +159,103 @@
     background: #f0f0f0;
 }
 
-@media (max-width: 768px) {
-    .introSection {
-        flex-direction: column;
-        align-items: flex-start;
+@media (max-width: 1200px) {
+    .mapImage {
+        float: none;
+        display: block;
+        margin: 0 auto 20px auto;
+        max-width: 100%;
+    }
+
+    .imageGallery {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        gap: 10px;
+        padding: 0 10px;
+        -webkit-overflow-scrolling: touch;
+        width: 100%; /* Полная ширина контейнера */
+        justify-content: flex-start; /* Изображения начинаются с левого края */
+    }
+
+    .galleryImage {
+        flex-shrink: 0;
+        width: 200px;
+        height: 200px;
+        scroll-snap-align: start; /* Привязка к началу изображения */
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .modalImage {
+        width: 800px;
+        height: 500px;
+    }
+}
+
+@media (max-width: 900px) {
+    .modalImage {
+        width: 700px;
+        height: 450px;
+    }
+}
+
+@media (max-width: 750px) {
+    .modalImage {
+        width: 600px;
+        height: 400px;
+    }
+}
+
+
+
+@media (max-width: 700px) {
+    .container {
+        margin: 20px 20px 20px 20px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .container h1 {
+        font-size: 20px;
+    }
+
+    .textBlock {
+        margin-bottom: 20px;
+    }
+    
+    .textBlock h2 {
+        font-size: 20px;
+        margin: auto;
+    }
+
+    .mapImage {
+        float: none;
+        display: block;
+        margin: 0 auto 20px auto;
+        max-width: 100%;
+    }
+
+    .imageGallery {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        gap: 10px;
+        padding: 0 10px;
+        -webkit-overflow-scrolling: touch;
+        width: 100%; /* Полная ширина контейнера */
+        justify-content: flex-start; /* Изображения начинаются с левого края */
+    }
+
+    .galleryImage {
+        flex-shrink: 0;
+        width: 150px;
+        height: 150px;
+        scroll-snap-align: start; /* Привязка к началу изображения */
+        transition: transform 0.3s ease-in-out;
     }
 }
