--- a/src/app/PageAboutUs/css/PageAboutUs.module.css
+++ b/src/app/PageAboutUs/css/PageAboutUs.module.css
@@ -1,6 +1,8 @@
 /* Контейнер для картинки та опису */
+
+
 .aboutus {
-    margin: 50px 40px 20px 40px;
+    margin: 40px 40px 20px 40px;
 }
 
 /* Стилі для зображення */
@@ -13,13 +15,21 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.5); 
 }
 
+.section {
+    margin-bottom: 30px;
+}
+
+.section h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
 /* Стилі для опису */
 .description {
-    /* flex: 1;
-    width: 100%; */
     text-align: justify;
-    font-size: 17px;
-    margin-bottom: 10px;
+    font-size: 16px;
+    /* margin-bottom: 10px; */
 }
 
 /* Стилі для нижнього тексту */
@@ -41,6 +51,10 @@
         text-align: center;
     }
 
+    .aboutus {
+        margin: 20px 20px 20px 20px;
+    }
+
     .img {
         float: none; /* Убираем обтекание */
         display: block; /* Делаем изображение блочным элементом */
@@ -56,6 +70,11 @@
     .text {
         font-size: 15px;
         margin: 0 15px 0 15px;
+    }
+
+    .section h2 {
+        font-size: 20px;
+        text-align: center;
     }
 }
 
