--- a/src/app/PageAboutUs/css/PageAboutUs.module.css
+++ b/src/app/PageAboutUs/css/PageAboutUs.module.css
@@ -20,6 +20,11 @@
 }
 
 .section h2 {
+    text-Align: center;
+    font-family: "Playwrite India", sans-serif;
+    color: #556B2F;
+    font-style: italic;
+    font-weight: bold;
     font-size: 24px;
     margin-bottom: 15px;
     font-weight: bold;
